# Personal-AI-Employee

./: .env.example  .gitignore  APPROVED_PROCESSOR_SETUP.md  CLAUDE.md  Dockerfile  FACEBOOK_INTEGRATION_SETUP.md  README.md  SETUP_SUMMARY.md  mcp-config.json  package-lock.json  pyproject.toml  setup_facebook_integration.py
AI_Employee_Vault/: .facebook_seen.json  .gmail_seen_ids.json  .twitter_seen.json  Business_Goals.md  Company_Handbook.md  Dashboard.md  Dashboard.md.backup
backend/: .env.example  main.py  requirements.txt
dashboard/: demo-setup.sh  index.html  package-lock.json  package.json  vite.config.ts
docs/: healthcare-email-testing-guide.md  healthcare-manual-testing-guide.md
k8s/: deployment.yaml
mcp/: __init__.py  browser_mcp  calendar_mcp  facebook_mcp  gmail_mcp  instagram_mcp  linkedin_mcp  odoo_mcp  twitter_mcp  whatsapp_mcp
mcp_services/: __init__.py
odoo_custom_modules/: .gitkeep
scripts/: calendar_oauth.py  gmail_oauth.py  run_all.sh  run_backend.sh  run_backend_port8000.sh  run_dashboard.sh  run_watchers.sh  setup_odoo.sh  setup_uv.sh  start_all.sh  start_production.sh  status.sh  stop_all.sh  test_system.sh  whatsapp_setup.py
tests/: conftest.py  debug_test.py  test_ai_reasoning.py  test_approvals_api.py  test_dashboard_stability.py  test_runner.py  test_status_api.py  test_vault_api.py  test_watchers_api.py
vault/: Company_Handbook.md  Dashboard.md
watchers/: appointment_reminder_watcher.py  approved_watcher.py  base_watcher.py  facebook_watcher.py  file_watcher.py  gmail_watcher.py  instagram_watcher.py  linkedin_watcher.py  (+5 more)
(+333 files in other folders)
